# AoC2021_Day6

./: CMakeLists.txt  README.md
cmake/: FindFunctions.cmake
src/: main.cpp
src/resources/: output.txt
